fix not showing icons and update items onclick actions

--- a/Ecommerce-site/src/global.css
+++ b/Ecommerce-site/src/global.css
@@ -4,9 +4,12 @@
  @tailwind components;
  @tailwind utilities;
 
- * {
+ *:not(i) {
+    font-family: 'Jost', sans-serif
+}
+ /* {
   font-family: 'Jost', sans-serif;
   transition-duration: 300ms;
   scroll-behavior: smooth;
- }
+ }*/
 
